ADD: query by example to filter

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,16 @@
             <artifactId>jasperreports</artifactId>
             <version>6.21.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>10.20.0</version> <!-- Usa la última versión disponible -->
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>10.20.0</version> <!-- Match the flyway-core version -->
+        </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
