--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=audit-transactions
+
+
+
+###############################
+#### Database Configuration ###
+###############################
+spring.datasource.url= ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/devsu_database?createDatabaseIfNotExist=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root123}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=validate
+
+###############################
+########### flyway ############
+###############################
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+
+##########################
+######## Kafka ###########
+##########################
+
+spring.kafka.bootstrap-servers= ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+
+spring.kafka.streams.application-id= devsuTest
+spring.kafka.consumer.auto-offset-reset= earliest
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.consumer.group-id = query-data-management-group
+spring.kafka.properties.allow.auto.create.topics=true
