--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=audit-transactions
-server.port=8085
+server.port=${SERVER_PORT:8083}
 
 
 ###############################
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=validate
 ########### flyway ############
 ###############################
 
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
